--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
   base    = "docs"  # ビルドを実行するディレクトリ
-  publish = "docs/build"  # ホスティングするディレクトリ
+  publish = "build"  # ホスティングするディレクトリ
   command = "sphinx-build source build"  # ビルドコマンド
